--- a/.env
+++ b/.env
@@ -36,10 +36,10 @@ CERTIFICATES_CONTAINER_PATH=/certificates/kestrel-certificate.pfx
 NGINX_CERTIFICATES_PATH=./certificates
 
 # Remote
-# CONNECTIONSTRINGS__DEFAULT='User ID=nsseAdmin;Password=]nD2d!kL5$Pl>>WfN)p]3igPXKb|;Host=host.docker.internal;Port=5432;Database=notSoSimpleEcommerce;Include Error Detail=true'
+CONNECTIONSTRINGS__DEFAULT='User ID=nsseAdmin;Password=sY]6MU:lrg|94[mQt!QA5p?wDsrt;Host=host.docker.internal;Port=5432;Database=notSoSimpleEcommerce;Include Error Detail=true'
 
 # Local
-CONNECTIONSTRINGS__DEFAULT="User ID=postgres;Password=postgres;Host=nsse.database.internal;Port=5432;Database=nsse;Include Error Detail=true"
+# CONNECTIONSTRINGS__DEFAULT="User ID=postgres;Password=postgres;Host=nsse.database.internal;Port=5432;Database=nsse;Include Error Detail=true"
 
 AWSS3PARAMS01__BUCKETNAME=nsse-bucket
 AWSS3PARAMS01__URIEXPIRATIONMINUTES=60
