--- a/docker-compose.infra.yml
+++ b/docker-compose.infra.yml
@@ -50,13 +50,13 @@ services:
     networks:
       - nsse-network
 
-  nsse.database.internal:
-    container_name: nsse.database.internal
-    image: postgres:16.0-alpine
-    ports:
-      - 5432:5432
-    environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
-    networks:
-      - nsse-network
+  # nsse.database.internal:
+  #   container_name: nsse.database.internal
+  #   image: postgres:16.0-alpine
+  #   ports:
+  #     - 5432:5432
+  #   environment:
+  #     - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+  #     - POSTGRES_DB=${POSTGRES_DB}
+  #   networks:
+  #     - nsse-network
