--- a/.env
+++ b/.env
@@ -36,7 +36,9 @@ CERTIFICATES_CONTAINER_PATH=/certificates/kestrel-certificate.pfx
 NGINX_CERTIFICATES_PATH=./certificates
 
 # Remote
-CONNECTIONSTRINGS__DEFAULT='User ID=nsseAdmin;Password=sY]6MU:lrg|94[mQt!QA5p?wDsrt;Host=host.docker.internal;Port=5432;Database=notSoSimpleEcommerce;Include Error Detail=true'
+# CONNECTIONSTRINGS__DEFAULT='User ID=nsseAdmin;Password=y~zY|~?>3rK(axnXyLBIo9]QdYsz;Host=host.docker.internal;Port=5432;Database=notSoSimpleEcommerce;Include Error Detail=true'
+
+CONNECTIONSTRINGS__DEFAULT='User ID=nsseAdmin;Password=*nH{hE$rxVqX>7-x~mQ8*ISu~x0Q;Host=172.17.0.1;Port=5432;Database=notSoSimpleEcommerce;Include Error Detail=true'
 
 # Local
 # CONNECTIONSTRINGS__DEFAULT="User ID=postgres;Password=postgres;Host=nsse.database.internal;Port=5432;Database=nsse;Include Error Detail=true"
